--- a/code/AnalyzeData.ipynb
+++ b/code/AnalyzeData.ipynb
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pylab\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plotOneLists (score, title):\n",
+    "    f = plt.figure (figsize=(16, 6))\n",
+    "    # this is painfully tedious....\n",
+    "    f .suptitle (title, fontsize=20)\n",
+    "    ax = f.add_subplot(111)\n",
+    "    ax .spines ['top'] .set_color ('none')\n",
+    "    ax .spines ['bottom'] .set_color ('none')\n",
+    "    ax .spines ['left'] .set_color ('none')\n",
+    "    ax .spines ['right'] .set_color ('none')\n",
+    "    ax .tick_params (labelcolor='w', top='off', bottom='off', left='off', right='off', labelsize=20)\n",
+    "\n",
+    "    # Create two subplots, this is the first one\n",
+    "    ax1 = f .add_subplot (111)\n",
+    "    plt .subplots_adjust (wspace=.5)\n",
+    "\n",
+    "    pos = np .arange (len(bronze)) \n",
+    "    ax1 .tick_params (axis='both', which='major', labelsize=14)\n",
+    "    pylab .yticks (pos, [ x [0] for x in bronze ])\n",
+    "    ax1 .barh (range(len(bronze)), [ x [1] for x in bronze ], align='center', color='chocolate')\n",
+    "    ax1.set_xlabel(\"bronze\")\n",
+    "    \n",
+    "weather = open('../data/weather.txt','r')\n",
+    "dataWeather = weather.readlines()\n",
+    "\n",
+    "dataW = {}\n",
+    "for x in dataWeather:\n",
+    "    temp = x.split()\n",
+    "    dataW[temp[0]] = temp[1]\n",
+    "    \n",
+    "dataWA = {}\n",
+    "for x in ScoreA:\n",
+    "    dataWA[x[0]] = dataW[x[0]]"
+   ]
   }
  ],
  "metadata": {
