--- a/code/AnalyzeData.ipynb
+++ b/code/AnalyzeData.ipynb
@@ -1103,6 +1103,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b><div style = \"font-family: Times New Roman;\">What we are trying to determine:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">Do warmer countries have a tenedency to perform better in the summer olympics as opposed to colder countries?</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Does the event being conducted inside or outside affect the country's performance?</li>\n",
+    "</ul>\n",
+    "<b><div style = \"font-family: Times New Roman;\">Color key:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">Red = Extremely Warm</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Gold = Warm</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Yellow = Moderate</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Mint Green = Cold</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Turquoise = Extremely Cold</li>\n",
+    "</ul>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
@@ -1214,7 +1233,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><center>Conclusions: </center></strong>"
+    "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">This event is conducted outside.</li>\n",
+    "</ul>\n",
+    "    \n",
+    "<b><div style = \"font-family: Times New Roman;\">Observations:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The moderate countries (yellow) performed the best in archery, with France being an outlier.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The warm countries (gold) performed average. However, Finland is an extremely cold country and is also found in this range.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The cold countries (mint green) performed the worst in archery, with the Soviet Union being an outlier.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The colder countries are found more so on the right side of the graph, whereas the moderate and warm countries are found more so on the left side or the middle. This even being conducted outisde could be a reason for colder countries perfomring slightly better. However, there are still outliers that dispute this claim.</li>\n",
+    "</ul>\n",
+    "  \n",
+    "<div style = \"font-family: Times New Roman;\"><strong><center>Conclusion: there is no obvious correlation between the country's temperature and its performance in archery.</center></strong></div>\n"
    ]
   },
   {
@@ -1241,7 +1274,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><center>Conclusions: </center></strong>"
+    "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">This event is conducted both inside and outside.</li>\n",
+    "</ul>\n",
+    "    \n",
+    "<b><div style = \"font-family: Times New Roman;\">Observations:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The moderate countries (yellow) performed the best in 3M diving, with Italy being an outlier.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The cold countries (mint green) performed about average, with the Unified Team and Germany both being outliers.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Mexico, an extremely warm country (red), also performed  average.</li>\n",
+    "</ul>\n",
+    "  \n",
+    "<div style = \"font-family: Times New Roman;\"><strong><center>Conclusion: there is no obvious correlation between a country's temperature and its performance in the 3M diving event.</center></strong></div>\n"
    ]
   },
   {
@@ -1268,7 +1314,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><center>Conclusions: </center></strong>"
+    "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">This event is conducted both inside and outside.</li>\n",
+    "</ul>\n",
+    "    \n",
+    "<b><div style = \"font-family: Times New Roman;\">Observations:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The moderate countries (yellow) performed the best in the 10M diving event, with Italy being an outlier again.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Australia, a warm country (gold), performed slightly above average.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The cold countries (mint green) performed both average and below average, with the Soviet Union being an outlier.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Mexico, an extremely warm country (red), also performed very below avergage.</li>\n",
+    "</ul>\n",
+    "  \n",
+    "<div style = \"font-family: Times New Roman;\"><strong><center>Conclusion: there is no obvious correlation between a country's temperature and its performance in the 10M diving event.</center></strong></div>"
    ]
   },
   {
@@ -1295,7 +1355,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><center>Conclusions: </center></strong>"
+    "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">This event is conducted inside.</li>\n",
+    "</ul>\n",
+    "    \n",
+    "<b><div style = \"font-family: Times New Roman;\">Observations:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The cold countries (mint green) performed the best in the gymnastics floor exercise event. However, there are cold countries that also performed average and below average.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The warm countries (gold) performed either average or below average.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The moderate countries (yellow) performed both above average and extremely below average.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The colder countries are found more so on the left side of the graph, whereas the moderate and warm countries are found more so on the right side. This even being conducted inside could be a reason for colder countries perfomring slightly better. However, there are still outliers that dispute this claim.</li>\n",
+    "</ul>\n",
+    "  \n",
+    "<div style = \"font-family: Times New Roman;\"><strong><center>Conclusion: there is no obvious correlation between a country's temperature and its performance in the gymnastics floor exercise event.</center></strong></div>"
    ]
   },
   {
@@ -1322,7 +1396,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><center>Conclusions: </center></strong>"
+    "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">This event is conducted inside or outside.</li>\n",
+    "</ul>\n",
+    "    \n",
+    "<b><div style = \"font-family: Times New Roman;\">Observations:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The only two countries of the same temperature range that received a similar number of medals are India and Zimbawe, both extremely warm countries.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Countries that fall within the same temperature ranges (warm, moderate, cold, and extremely cold) are evenly spread out across the graph.</li>\n",
+    "</ul>\n",
+    "<div style = \"font-family: Times New Roman;\"><strong><center>Conclusion: there is absolutely no correlation between a country's temperature and its performance in the hockey event.</center></strong></div>"
    ]
   },
   {
@@ -1349,8 +1434,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><center>Conclusions: </center></strong>"
+    "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">This event is conducted inside.</li>\n",
+    "</ul>\n",
+    "    \n",
+    "<b><div style = \"font-family: Times New Roman;\">Observations:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">Countries that fall within the same temperature ranges (extremely warm, warm, moderate, cold, and extremely cold) are all spread out across the graph.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">There are a few countries of the same temperature range that are lumped together, but not enough that it would indicate any sort of correlation.</li>\n",
+    "\n",
+    "</ul>\n",
+    "<div style = \"font-family: Times New Roman;\"><strong><center>Conclusion: there is absolutely no correlation between a country's temperature and its performance in the volleyball event.</center></strong></div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong><div style = \"height:100px;line-height:100px;text-align:center;background-color:#00ff99;font-size:50px;border-radius:25px;font-family: Times New Roman\">\n",
+    "  Overall Conclusions:\n",
+    "</div></strong>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b><div style = \"font-family: Times New Roman;\">Conclusions:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">Each graph listed the countries from left to right depending on the number of medals the country received with the left being the greatest number of medals and the right being the least number of medals. We wanted to know if warmer countries performed better in the summer olympics overall. If that were the case, the warmer countries would be primarily on the right side of each graph and the colder countries would be on the left side of each graph. After examining all the graphs, warmer countries did not perform better in the summer olympics overall. Countries of all temperature ranges were found anywhere along the x-axis of the graphs.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The only two events that indicated a slight correlation between a country's average temperature and performance in an event was archery and the gymnastics floor exercise. Colder countries seemed to perform better in gymnastics (an inside event), whereas warmer countries seemed to perform better in archery (an outside event). Nevertheless, there was no obvious correlation and were several outliers within the graphs for each event. The other events we observed did not indicate a correlation between a countries temperature and whether or not the even took place outside or inside.</li>\n",
+    "</ul>\n",
+    "<b><div style = \"font-family: Times New Roman;\">Things we could have done differently or better:</div></b>\n",
+    "<li style = \"font-family: Times New Roman;\">do we want to say anything?</li>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
