final conclusions added

--- a/code/AnalyzeData.ipynb
+++ b/code/AnalyzeData.ipynb
@@ -1108,8 +1108,8 @@
    "source": [
     "<b><div style = \"font-family: Times New Roman;\">What we are trying to determine:</div></b>\n",
     "<ul>\n",
-    "<li style = \"font-family: Times New Roman;\">Do warmer countries have a tenedency to perform better in the summer olympics as opposed to colder countries?</li>\n",
-    "<li style = \"font-family: Times New Roman;\">Does the event being conducted inside or outside affect the country's performance?</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Main question: Do warmer countries have a tenedency to perform better in the summer olympics as opposed to colder countries?</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Secondary question: Does the event being conducted inside or outside affect the country's performance?</li>\n",
     "</ul>\n",
     "<b><div style = \"font-family: Times New Roman;\">Color key:</div></b>\n",
     "<ul>\n",
@@ -1467,8 +1467,18 @@
     "<li style = \"font-family: Times New Roman;\">Each graph listed the countries from left to right depending on the number of medals the country received with the left being the greatest number of medals and the right being the least number of medals. We wanted to know if warmer countries performed better in the summer olympics overall. If that were the case, the warmer countries would be primarily on the right side of each graph and the colder countries would be on the left side of each graph. After examining all the graphs, warmer countries did not perform better in the summer olympics overall. Countries of all temperature ranges were found anywhere along the x-axis of the graphs.</li>\n",
     "<li style = \"font-family: Times New Roman;\">The only two events that indicated a slight correlation between a country's average temperature and performance in an event was archery and the gymnastics floor exercise. Colder countries seemed to perform better in gymnastics (an inside event), whereas warmer countries seemed to perform better in archery (an outside event). Nevertheless, there was no obvious correlation and were several outliers within the graphs for each event. The other events we observed did not indicate a correlation between a countries temperature and whether or not the even took place outside or inside.</li>\n",
     "</ul>\n",
+    "\n",
+    "<ul>\n",
+    "<b><div style = \"font-family: Times New Roman;\">Unexpected Outcomes:</div></b>\n",
+    "<li style = \"font-family: Times New Roman;\">Canada not being in the top countries for Hockey.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The Soviet Union not being being higher in the top countries for Hockey (this expectation was largely based on the movie \"Miracle\").</li>\n",
+    "</ul>\n",
+    "\n",
+    "<ul>\n",
     "<b><div style = \"font-family: Times New Roman;\">Things we could have done differently or better:</div></b>\n",
-    "<li style = \"font-family: Times New Roman;\">do we want to say anything?</li>"
+    "<li style = \"font-family: Times New Roman;\">Take into account the fact that some countries' names changed over the years (Germany, Soviet Union, and Yugoslavia). </li>\n",
+    "<li style = \"font-family: Times New Roman;\">Instead of looking at the Olympics, look at a different type of contest, such as chess or anything more academic.</li>\n",
+    "</ul> "
    ]
   },
   {
