added header for scores

--- a/code/AnalyzeData.ipynb
+++ b/code/AnalyzeData.ipynb
@@ -799,6 +799,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong><div style = \"height:100px;line-height:100px;text-align:center;background-color:#00ff99;font-size:50px;border-radius:25px;font-family: Times New Roman\">\n",
+    "  Event Scores\n",
+    "</div></strong>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b><div style = \"font-family: Times New Roman;\">Medal Point Values:</div></b>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">Gold = 3 points</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Silver = 2 points</li>\n",
+    "<li style = \"font-family: Times New Roman;\">Bronze = 1 point</li>\n",
+    "</ul>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
@@ -875,7 +896,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><body><div style = \"height:50px;line-height:50px;text-align:center;background-color:gold;font-size:40px;border-radius:25px;font-family: Times New Roman;color:blue;width:75%\">\n",
+    "<center><body><div style = \"height:50px;line-height:50px;background-color:gold;font-size:40px;border-radius:25px;font-family: Times New Roman;color:blue;width:75%\">\n",
     "    <b>Diving 3M Springboard Scores</b>\n",
     "</div></body></center>"
    ]
@@ -1468,14 +1489,15 @@
     "<li style = \"font-family: Times New Roman;\">The only two events that indicated a slight correlation between a country's average temperature and performance in an event was archery and the gymnastics floor exercise. Colder countries seemed to perform better in gymnastics (an inside event), whereas warmer countries seemed to perform better in archery (an outside event). Nevertheless, there was no obvious correlation and were several outliers within the graphs for each event. The other events we observed did not indicate a correlation between a countries temperature and whether or not the even took place outside or inside.</li>\n",
     "</ul>\n",
     "\n",
-    "<ul>\n",
     "<b><div style = \"font-family: Times New Roman;\">Unexpected Outcomes:</div></b>\n",
-    "<li style = \"font-family: Times New Roman;\">Canada not being in the top countries for Hockey.</li>\n",
+    "<ul>\n",
+    "<li style = \"font-family: Times New Roman;\">Canada not being in the top countries for Hockey.\n",
+    "</li>\n",
     "<li style = \"font-family: Times New Roman;\">The Soviet Union not being being higher in the top countries for Hockey (this expectation was largely based on the movie \"Miracle\").</li>\n",
     "</ul>\n",
     "\n",
-    "<ul>\n",
     "<b><div style = \"font-family: Times New Roman;\">Things we could have done differently or better:</div></b>\n",
+    "<ul>\n",
     "<li style = \"font-family: Times New Roman;\">Take into account the fact that some countries' names changed over the years (Germany, Soviet Union, and Yugoslavia). </li>\n",
     "<li style = \"font-family: Times New Roman;\">Instead of looking at the Olympics, look at a different type of contest, such as chess or anything more academic.</li>\n",
     "</ul> "
