fixed my mistakes

--- a/code/AnalyzeData.ipynb
+++ b/code/AnalyzeData.ipynb
@@ -1297,7 +1297,7 @@
    "source": [
     "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
     "<ul>\n",
-    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in 3M diving event with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
     "<li style = \"font-family: Times New Roman;\">This event is conducted both inside and outside.</li>\n",
     "</ul>\n",
     "    \n",
@@ -1337,7 +1337,7 @@
    "source": [
     "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
     "<ul>\n",
-    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in the 10M diving event with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
     "<li style = \"font-family: Times New Roman;\">This event is conducted both inside and outside.</li>\n",
     "</ul>\n",
     "    \n",
@@ -1378,7 +1378,7 @@
    "source": [
     "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
     "<ul>\n",
-    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in the gymnastics floor exercise with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
     "<li style = \"font-family: Times New Roman;\">This event is conducted inside.</li>\n",
     "</ul>\n",
     "    \n",
@@ -1419,7 +1419,7 @@
    "source": [
     "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
     "<ul>\n",
-    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in Hockey with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
     "<li style = \"font-family: Times New Roman;\">This event is conducted inside or outside.</li>\n",
     "</ul>\n",
     "    \n",
@@ -1457,7 +1457,7 @@
    "source": [
     "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
     "<ul>\n",
-    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in archery with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in volleyball with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
     "<li style = \"font-family: Times New Roman;\">This event is conducted inside.</li>\n",
     "</ul>\n",
     "    \n",
