changed hockey stats

--- a/code/AnalyzeData.ipynb
+++ b/code/AnalyzeData.ipynb
@@ -1446,7 +1446,7 @@
     "<b><div style = \"font-family: Times New Roman;\">Notes:</div></b>\n",
     "<ul>\n",
     "<li style = \"font-family: Times New Roman;\">The countries are listed from left to right depending on the number of medals each country received in Hockey with the left being the greatest number of medals and the right being the least number of medals.</li>\n",
-    "<li style = \"font-family: Times New Roman;\">This event is conducted inside or outside.</li>\n",
+    "<li style = \"font-family: Times New Roman;\">This event is conducted outside.</li>\n",
     "</ul>\n",
     "    \n",
     "<b><div style = \"font-family: Times New Roman;\">Observations:</div></b>\n",
@@ -1460,7 +1460,9 @@
   {
    "cell_type": "code",
    "execution_count": 291,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1513,13 +1515,6 @@
     "<ul>\n",
     "<li style = \"font-family: Times New Roman;\">Each graph listed the countries from left to right depending on the number of medals the country received with the left being the greatest number of medals and the right being the least number of medals. We wanted to know if warmer countries performed better in the summer olympics overall. If that were the case, the warmer countries would be primarily on the left side of each graph and the colder countries would be on the right side of each graph. After examining all the graphs, warmer countries did not perform better in the summer olympics overall. Countries of all temperature ranges were found anywhere along the x-axis of the graphs.</li>\n",
     "<li style = \"font-family: Times New Roman;\">The only two events that indicated a slight correlation between a country's average temperature and performance in an event was archery and the gymnastics floor exercise. Colder countries seemed to perform better in gymnastics (an inside event), whereas warmer countries seemed to perform better in archery (an outside event). Nevertheless, there was no obvious correlation and were several outliers within the graphs for each event. The other events we observed did not indicate a correlation between a countries temperature and whether or not the even took place outside or inside.</li>\n",
-    "</ul>\n",
-    "\n",
-    "<b><div style = \"font-family: Times New Roman;\">Unexpected Outcomes:</div></b>\n",
-    "<ul>\n",
-    "<li style = \"font-family: Times New Roman;\">Canada not being in the top countries for Hockey.\n",
-    "</li>\n",
-    "<li style = \"font-family: Times New Roman;\">The Soviet Union not being being higher in the top countries for Hockey (this expectation was largely based on the movie \"Miracle\").</li>\n",
     "</ul>\n",
     "\n",
     "<b><div style = \"font-family: Times New Roman;\">Things we could have done differently or better:</div></b>\n",
